# running_page

./: .env.example  .gitignore  APPLE_WATCH_SETUP.md  Makefile  README-CN.md  README.md  STRAVA_SETUP.md  index.html  package.json  pnpm-lock.yaml  pyproject.toml  requirements.txt  vite.config.ts
.github/: dependabot.yml
.github/workflows/: ci.yml  gh-pages.yml  run_data_sync.yml
run_page/: apple_workout_import.py  config.py  data.db  intervals_icu_sync.py  strava_env_sync.py  strava_sync.py
run_page/coach/: __init__.py  azure_plan.py  build_context.py  daily_coach.py  email_plan.py  goals.json  planner.py  profile.json  workout_library.py
run_page/coach_output/: coach_input.json  latest_plan.json  week_plan.json
run_page/generator/: __init__.py
scripts/: create-static-routes.mjs  install-apple-workout-sync.sh  sync-apple-workouts.sh
src/: main.tsx
src/components/Header/: index.tsx  style.module.css
src/components/Layout/: index.tsx
src/components/LocationStat/: index.tsx
src/components/RunMap/: RunMarker.tsx  index.tsx  style.module.css
src/components/RunTable/: style.module.css
src/components/Stat/: index.tsx
src/components/YearStat/: index.tsx
src/components/YearsStat/: index.tsx
src/pages/: 404.tsx  index.tsx
src/static/: activities.json  races.json  site-metadata.ts
src/styles/: index.css
src/utils/: const.ts  routeAnimation.ts  utils.ts
