[project]
name = "running-page"
version = "1.0.0"
description = "Personal Strava running log published under /running/."
requires-python = ">=3.11"
dependencies = [
  "arrow",
  "geopy",
  "haversine==2.8.0",
  "polyline",
  "requests",
  "sqlalchemy",
  "stravalib==0.10.4",
  "certifi==2025.1.31",
]

[dependency-groups]
dev = []
